--- a/index.css
+++ b/index.css
@@ -108,7 +108,7 @@ nav ul li:last-child {
   margin-bottom: 40px;
 }
 
-.contain a {
+/* .contain a {
   display: inline-block;
   color: #fff;
   background: #FF4300;
@@ -117,7 +117,7 @@ nav ul li:last-child {
   border-radius: 50px;
   text-transform: uppercase;
   font-weight: 600;
-}
+} */
 
 .contain {
  max-width: 1200px;
@@ -166,7 +166,7 @@ nav ul li:last-child {
 }
 .btn {
   color: #fff;
-  background: #ff6933;
+  background: #FF4300;
   padding: 20px 35px;
   text-decoration: none;
   border-radius: 50px;
@@ -185,6 +185,7 @@ nav ul li:last-child {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  padding: 80px;
 }
 .steps-grid {
   align-items: flex-start;
@@ -228,6 +229,70 @@ nav ul li:last-child {
   margin-top: 20px;
   margin-bottom: 50px;
 }
+.cus-love{
+  height: 700px;
+  background: linear-gradient(rgba(0, 0, 0, 0.3)),
+    url("./assets/images/customers.jpg");
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  padding: 100px 0;
+  .contain{
+    height: max-content;
+    margin: 150px auto;
+  }
+}
+.cus-love-text{
+  width: 55%;
+h1{
+  font-size: 3rem;
+  color: #fff;
+  margin-bottom: 20px;
+  width: 50%;
+  span{
+    color: #FF4300;
+  }
+}
+p{
+  font-size: 1rem;
+  color: #fff;
+  width: 70%;
+  font-weight: 500;
+  line-height: 1.5;
+}
+.name{
+  color: 
+  rgb(153, 151, 145);
+  font-weight: 600;
+  font-size: 14px;
+  margin: 10px 0 30px;
+}
+}
+.vehicles{
+  padding: 200px 0;
+}
+.vehicles-grid{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  
+}
+.vehicles-text{
+  h1{
+    font-size: 3rem;
+    margin-bottom: 20px;
+    width: 50%;
+    span{
+      color: #FF4300;
+    }
+  }
+  p{
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5;
+    margin-bottom: 40px;
+  }
+}
+
 @media (max-width: 1024px) {
  nav ul{
   display: none;
